--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "agendamento": "file:",
+    "axios": "^1.7.9",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5"
   },
