--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
+    "nodeman": "^1.1.2",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
