--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
     "mysql2": "^3.12.0",
     "nodeman": "^1.1.2",
     "typeorm": "^0.3.20"
