--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "knex": "^3.1.0",
     "mysql2": "^3.12.0",
     "nodeman": "^1.1.2",
+    "nodemon": "^3.1.9",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
